{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 73,
  "lineage": "93d6dc4b-b2c9-0b0e-0ca9-36f8c0bad994",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:security-group/sg-015bda3ffa3cb5e26",
            "description": "Security group for EKS cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-015bda3ffa3cb5e26",
            "ingress": [],
            "name": "sensapbl-pilot-eks-cluster-sg",
            "name_prefix": "",
            "owner_id": "311964231104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sensapbl-pilot-eks-cluster-sg"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-eks-cluster-sg",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:security-group/sg-0be4b1b2fc23f7084",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be4b1b2fc23f7084",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-015bda3ffa3cb5e26"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "sensapbl-pilot-eks-nodes-sg",
            "name_prefix": "",
            "owner_id": "311964231104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sensapbl-pilot-eks-nodes-sg"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-eks-nodes-sg",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.elasticache",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:security-group/sg-0be35a2776e8f0dc3",
            "description": "Security group for ElastiCache Redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be35a2776e8f0dc3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be4b1b2fc23f7084"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "sensapbl-pilot-redis-sg",
            "name_prefix": "",
            "owner_id": "311964231104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sensapbl-pilot-redis-sg"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-redis-sg",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:security-group/sg-0cff4c7b2b3fcfafb",
            "description": "Security group for RDS PostgreSQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cff4c7b2b3fcfafb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0be4b1b2fc23f7084"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "sensapbl-pilot-rds-sg",
            "name_prefix": "",
            "owner_id": "311964231104",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sensapbl-pilot-rds-sg"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-rds-sg",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks.aws_security_group.eks_cluster",
            "module.eks.aws_security_group.eks_nodes",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0773c84c788773e4a",
            "arn": "arn:aws:ec2:us-east-1:311964231104:elastic-ip/eipalloc-0773c84c788773e4a",
            "association_id": "eipassoc-09546cbb41c1dccc0",
            "domain": "vpc",
            "id": "eipalloc-0773c84c788773e4a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-09515b242b7d16669",
            "private_dns": "ip-10-0-15-205.ec2.internal",
            "private_ip": "10.0.15.205",
            "public_dns": "ec2-44-218-202-221.compute-1.amazonaws.com",
            "public_ip": "44.218.202.221",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "sensapbl-pilot-nat-eip"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-nat-eip",
              "Project": "SensaPBL"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:internet-gateway/igw-02dabb610f6f85f07",
            "id": "igw-02dabb610f6f85f07",
            "owner_id": "311964231104",
            "tags": {
              "Name": "sensapbl-pilot-igw"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-igw",
              "Project": "SensaPBL"
            },
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0773c84c788773e4a",
            "association_id": "eipassoc-09546cbb41c1dccc0",
            "connectivity_type": "public",
            "id": "nat-046aeaf49de30a3bf",
            "network_interface_id": "eni-09515b242b7d16669",
            "private_ip": "10.0.15.205",
            "public_ip": "44.218.202.221",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a1c13bbc4a85ce04",
            "tags": {
              "Name": "sensapbl-pilot-nat"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-nat",
              "Project": "SensaPBL"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:route-table/rtb-0c281b580a4ae8846",
            "id": "rtb-0c281b580a4ae8846",
            "owner_id": "311964231104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-046aeaf49de30a3bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sensapbl-pilot-private-rt"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-private-rt",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:route-table/rtb-0e05df8b3bbe1dbbe",
            "id": "rtb-0e05df8b3bbe1dbbe",
            "owner_id": "311964231104",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02dabb610f6f85f07",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sensapbl-pilot-public-rt"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-public-rt",
              "Project": "SensaPBL"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-002ee903fc1cb7cce",
            "route_table_id": "rtb-0c281b580a4ae8846",
            "subnet_id": "subnet-02e41408e75412605"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067acae690ec9ffb5",
            "route_table_id": "rtb-0c281b580a4ae8846",
            "subnet_id": "subnet-01e8a91f5c065d1b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da26adf868eba608",
            "route_table_id": "rtb-0e05df8b3bbe1dbbe",
            "subnet_id": "subnet-0a1c13bbc4a85ce04"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0477b5908d1e98183",
            "route_table_id": "rtb-0e05df8b3bbe1dbbe",
            "subnet_id": "subnet-00e4f53466b9b383d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:subnet/subnet-02e41408e75412605",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e41408e75412605",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311964231104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sensapbl-pilot-private-1",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-private-1",
              "Project": "SensaPBL",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:subnet/subnet-01e8a91f5c065d1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e8a91f5c065d1b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311964231104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sensapbl-pilot-private-2",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-private-2",
              "Project": "SensaPBL",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:subnet/subnet-0a1c13bbc4a85ce04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1c13bbc4a85ce04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311964231104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sensapbl-pilot-public-1",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-public-1",
              "Project": "SensaPBL",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:subnet/subnet-00e4f53466b9b383d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e4f53466b9b383d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "311964231104",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sensapbl-pilot-public-2",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-public-2",
              "Project": "SensaPBL",
              "kubernetes.io/cluster/sensapbl-pilot": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d9d54f501d365b9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:311964231104:vpc/vpc-05d9d54f501d365b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007476cf5c49d6334",
            "default_route_table_id": "rtb-08745215d0f3ffef1",
            "default_security_group_id": "sg-0eda967488460b914",
            "dhcp_options_id": "dopt-04a77071ef890bffc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d9d54f501d365b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08745215d0f3ffef1",
            "owner_id": "311964231104",
            "tags": {
              "Name": "sensapbl-pilot-vpc"
            },
            "tags_all": {
              "Environment": "pilot",
              "ManagedBy": "Terraform",
              "Name": "sensapbl-pilot-vpc",
              "Project": "SensaPBL"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}